CRUD of projects and functional units
