# routes/api.php
@@ -25,10 +25,11 @@ Route::post('testExcel','Api\TestController@testExcel');
 /*Project Stock*/
 Route::resource('project', 'Api\ProjectController');
 Route::resource('functional-unit', 'Api\FunctionalUnitController');
+Route::get('project-units/{id}','Api\FunctionalUnitController@getByProject');
 Route::resource('forest-unit', 'Api\ForestUnitController');
 
 /*Forest unit proccess*/
 Route::post('forest-unit/first-phase','Api\ForestUnitController@firstPhase');
-Route::put('forest-unit/second-phase/{id}','Api\ForestUnitController@secondPhase');
-Route::put('forest-unit/third-phase/{id}','Api\ForestUnitController@thirdPhase');
-Route::put('forest-unit/fourth-phase/{id}','Api\ForestUnitController@fourthPhase');
+Route::put('forest-unit/second-phase/{forest_unit}','Api\ForestUnitController@secondPhase');
+Route::put('forest-unit/third-phase/{forest_unit}','Api\ForestUnitController@thirdPhase');
+Route::put('forest-unit/fourth-phase/{forest_unit}','Api\ForestUnitController@fourthPhase');
